--- a/static/manifest.json
+++ b/static/manifest.json
@@ -24,5 +24,5 @@
   },
   "options_page": "options.html",
   "content_security_policy": "script-src 'self' 'unsafe-eval'; object-src 'self';",
-  "permissions": ["tabs", "activeTab", "storage"]
+  "permissions": ["tabs", "activeTab", "storage", "unlimitedStorage"]
 }
