--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "xxxxx",
   "license": "MIT",
   "dependencies": {
+    "idb": "^5.0.4",
     "immer": "^7.0.8",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "tiny-context": "^1.8.2",
     "tslib": "^2.0.1"
   },
   "devDependencies": {
